--- a/report/pers_schedule/biometrics_submission/mainmatter/introduction.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/introduction.tex
@@ -1,14 +1,13 @@
 % !TEX root =  ../pers_schedules.tex 
 \section{Introduction}
 \label{sec : introduction}
-In this decade, prostate cancer (PCa) is the second most frequently diagnosed cancer (14\% of all cancers) in males worldwide, with nearly 67\% of all PCa cases reported in developed countries \citep{GlobalCancerStats2012}. The increase in diagnosis of low grade PCa has been attributed to increase in life expectancy and increase in number of screening programs \citep{potoskyPSAcancer}. A major issue of screening programs that has also been established in other types of cancers (e.g., breast cancer) is over-diagnosis.  To avoid overtreatment, patients diagnosed with low grade PCa are commonly advised to join active surveillance (AS) programs. The goal of AS is to routinely examine the progression of PCa and avoid serious treatments such as surgery, chemotherapy, or radiotherapy as long as they are not needed. To this end, AS includes, but is not limited to periodical evaluation of serum prostate specific antigen (PSA) levels, digital rectal examination, medical imaging, and biopsy.
+In this decade, prostate cancer (PCa) is the second most frequently diagnosed cancer (14\% of all cancers) in males worldwide \citep{GlobalCancerStats2012}. The increase in diagnosis of low grade PCa has been attributed to increase in life expectancy and increase in number of screening programs \citep{potoskyPSAcancer}. An issue of screening programs that has also been established in other types of cancers (e.g., breast cancer) is over-diagnosis.  To avoid overtreatment, patients diagnosed with low grade PCa are commonly advised to join active surveillance (AS) programs. In order to delay serious treatments such as surgery, chemotherapy, or radiotherapy, in AS PCa progression is routinely examined via serum prostate specific antigen (PSA) levels, digital rectal examination, medical imaging, and biopsy etc.
 
-For PCa patients, the decision to exit AS and start active treatment (e.g., operation, chemotherapy) is typically based on invasive examinations, such as biopsies \citep{bokhorst2016decade}. Biopsies can be reliable, but they are also painful, and have an associated risk of complications such as urinary retention, hematuria and sepsis \citep{loeb2013systematic}. Because of this reason the schedule of  biopsies has significant medical consequences for patients. A frequent schedule of biopsies may help detecting PCa progression earlier but the corresponding burden will be high. Although such a schedule may work well for patients with faster progressing cancer, for slowly progressing PCa patients many unnecessary biopsies may be scheduled. Furthermore, patients do not always comply with such a schedule. In the specific case of the world's largest AS program, Prostate Cancer Research International Active Surveillance (PRIAS), the compliance rate for biopsies steadily decreased from 81\% at year one of follow-up, to 60\% at year four, 53\% at year seven and 33\% at year ten  \citep{bokhorst2015compliance}. Such non-compliance can lead to delayed detection of PCa progression, which may reduce the effectiveness of AS programs.
+Biopsies are the most painful, prone to medical complications \citep{loeb2013systematic} and yet also the most reliable PCa progression examination technique used in AS. When a patient's biopsy Gleason grading becomes larger than 6 (Gleason reclassification or GR), he is advised to switch from AS to active treatment \citep{bokhorst2015compliance}. Hence the timing of biopsies has significant medical implications. The world's largest AS program, Prostate Cancer Research International Active Surveillance (PRIAS) conducts biopsies at year one, year four, year seven and year ten of follow-up, and every five years thereafter. However it switches to a more frequent, annual biopsy schedule for faster progressing patients. These are patients with PSA doubling time (PSA-DT) of less than 10 years. The latter is measured as the inverse of the slope of the regression line through the base two logarithm of PSA values. However, many AS programs use annual schedule for all patients \citep{tosoian2011active,welty2015extended}. Consequently, for slowly progressing PCa patients many unnecessary biopsies are scheduled. Furthermore, patients may not always comply with such schedules \citep{bokhorst2015compliance}, which can lead to delayed detection of PCa and reduce the effectiveness of AS.
 
-This paper is motivated by the need to reduce the medical burden of repeat biopsies while simultaneously avoiding late detection of PCa progression. For the latter purpose, some AS programs employ a fixed annual schedule (biopsies with a gap of one year) of biopsies \citep{tosoian2011active,welty2015extended}. However, given the burden of biopsies, most AS programs also strongly advise against scheduling biopsies more frequently than the annual schedule. The PRIAS schedule for biopsies is relatively lenient: one biopsy each is scheduled at year one of follow-up, year four, year seven, year ten, and every five years thereafter. However, PRIAS also switches to the annual schedule if a patient's PSA doubling time (PSA-DT), measured as the inverse of the slope of the regression line through the base two logarithm of PSA values, is less than 10 years. We intend to improve upon such fixed schedules by creating personalized schedules for biopsies. That is, a different schedule for every patient utilizing their periodically measured serum PSA levels (measured in ng/mL) and repeat biopsy results. Biopsies are graded using the Gleason score, which takes an integer value between 6 and 10, with 10 corresponding to the most serious state of the cancer. Patients enter AS only if their Gleason score is 6. When the Gleason score becomes greater than 6, also known as Gleason reclassification (referred to as GR hereafter), patients are advised to switch from AS to active treatment. Hence, for AS programs it is of prime interest to detect GR early with the least number of biopsies possible.
+This paper is motivated by the need to reduce the medical burden of repeat biopsies while simultaneously avoiding late detection of PCa progression.
+To this end, we intend to develop personalized schedules for biopsies using historical PSA measurements and biopsy results of patients. Personalized schedules for screening have received much interest in the literature, especially in the medical decision making context. For example, Markov decision process (MDP) models have been used to create personalized screening schedules for diabetic retinopathy \citep{bebu2017OptimalScreening}, breast cancer \citep*{ayer2012or}, cervical cancer \citep*{akhavan2017markov} and colorectal cancer \citep*{erenay2014optimizing}. Another type of model called joint model (JM) for time to event and longitudinal data \citep{tsiatis2004joint,rizopoulos2012joint} has also been used to create personalized schedules for the measurement of longitudinal biomarkers \citep{drizopoulosPersScreening}. In the context of PCa, \citet{zhang2012optimization} have used partially observable MDP models to personalize the decision of (not) deferring a biopsy to the next checkup time during the screening process. This decision is based on the baseline characteristics as well as a discretized PSA level of the patient at the current check up time.
 
-Personalized schedules for screening have received much interest in the literature, especially in the medical decision making context. For diabetic retinopathy, cost optimized personalized schedules based on Markov models have been developed by \citet{bebu2017OptimalScreening}. For breast cancer, personalized mammography screening policy based on the prior screening history and personal risk characteristics of women, using partially observable Markov decision process (MDP) models have been proposed by \citet*{ayer2012or}. MDP models have also been used to develop personalized screening policies for cervical cancer \citep*{akhavan2017markov} and colorectal cancer \citep*{erenay2014optimizing}. Another type of model called joint model for time to event and longitudinal data \citep{tsiatis2004joint,rizopoulos2012joint} has also been used to create personalized schedules, albeit for the measurement of longitudinal biomarkers \citep{drizopoulosPersScreening}. In the context of PCa, \citet{zhang2012optimization} have used partially observable MDP models to personalize the decision of (not) deferring a biopsy to the next checkup time during the screening process. The decision is based on the baseline characteristics as well as a discretized PSA level of the patient at the current check up time.
-
-Our work differs from the above referenced work in certain aspects. Firstly, the schedules we propose in this paper, account for the latent between-patient heterogeneity. We achieve this using joint models, which are inherently patient-specific because they utilize random effects. Secondly, joint models allow a continuous time scale and utilize the entire history of PSA levels. Lastly, instead of making a binary decision of (not) deferring a biopsy to the next pre-scheduled check up time, we schedule biopsies at a per patient optimal future time. To this end, using joint models we first obtain a full specification of the joint distribution of PSA levels and time of GR. We then use it to define a patient-specific posterior predictive distribution of the time of GR given the observed PSA measurements and repeat biopsies up to the current check up time. Using the general framework of Bayesian decision theory, we propose a set of loss functions which are minimized to find the optimal time of conducting a biopsy. These loss functions yield us two categories of personalized schedules, those based on expected time of GR and those based on the risk of GR. In addition we analyze an approach where the two types of schedules are combined. We also present methods to evaluate and compare the various schedules for biopsies.
+In comparison to the work referenced above, the schedules we propose in this paper account for the latent between-patient heterogeneity. We achieve this using JMs, which are inherently patient-specific because they utilize random effects. Secondly, JMs allow a continuous time scale and utilize the entire history of PSA levels. Lastly, instead of making a binary decision of (not) deferring a biopsy to the next pre-scheduled check up time, we schedule biopsies at a per patient optimal future time. To this end, using JMs we first obtain a full specification of the joint distribution of PSA levels and time of GR. We then use it to define a patient-specific posterior predictive distribution of the time of GR, given the observed PSA measurements and repeat biopsies up to the current check up time. Using the general framework of Bayesian decision theory, we propose a set of loss functions which are minimized to find the optimal time of conducting a biopsy. These loss functions yield us two categories of personalized schedules, those based on expected time of GR and those based on the risk of GR. In addition we analyze an approach where the two types of schedules are combined. We also present methods to evaluate and compare the various schedules for biopsies.
 
 The rest of the paper is organized as follows. Section \ref{sec : jm_framework} briefly covers the joint modeling framework. Section \ref{sec : pers_sched_approaches} details the personalized scheduling approaches we have proposed in this paper. In Section \ref{sec : choosing_schedule} we discuss methods for evaluation and selection of a schedule. In Section \ref{sec : pers_schedule_PRIAS} we demonstrate the personalized schedules by employing them for the patients from the PRIAS program. Lastly, in Section \ref{sec: simulation_study}, we present the results from a simulation study we conducted to compare personalized schedules with PRIAS and annual schedule.
