--- a/report/pers_schedule/biometrics_submission/mainmatter/pers_sched_framework/ppd_time_to_GR.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/pers_sched_framework/ppd_time_to_GR.tex
@@ -2,7 +2,7 @@
 
 \subsection{Posterior Predictive Distribution for Time to GR}
 \label{subsec : ppd_time_to_GR}
-Let $\mathcal{Y}_j(s)$ denote the history of PSA levels taken up to time $s$ for patient $j$. The information from PSA history and repeat biopsies is manifested by the posterior predictive distribution $g(T^*_j)$, given by (conditioning on baseline covariates $\bmath{w}_i$ is dropped for notational simplicity hereafter):
+The information from $\mathcal{Y}_j(s)$ and repeat biopsies is manifested by the posterior predictive distribution $g(T^*_j)$, given by (baseline covariates $\bmath{w}_i$ are not shown for brevity hereafter):
 \begin{equation*}
 \label{eq : dyn_dist_fail_time}
 \begin{split}
@@ -11,4 +11,4 @@ g(T^*_j) &= p\big\{T^*_j \mid T^*_j > t, \mathcal{Y}_j(s), \mathcal{D}_n\big\}\\
 &= \int \int p\big(T^*_j \mid T^*_j > t, \bmath{b}_j, \bmath{\theta}\big)p\big\{\bmath{b}_j \mid T^*_j>t, \mathcal{Y}_j(s), \bmath{\theta}\big\}p\big(\bmath{\theta} \mid \mathcal{D}_n\big) \rmn{d} \bmath{b}_j \rmn{d} \bmath{\theta}.
 \end{split}
 \end{equation*}
-The distribution $g(T^*_j)$ depends on the observed longitudinal history $\mathcal{Y}_j(s)$ of patient $j$ via the random effects $\bmath{b}_j$, and on the information from the original dataset $\mathcal{D}_n$ via the posterior distribution of the parameters $p(\bmath{\theta} \mid \mathcal{D}_n)$, where $\bmath{\theta}$ denotes the vector of all parameters.
+The distribution $g(T^*_j)$ depends on $\mathcal{Y}_j(s)$ and $\mathcal{D}_n$ via the posterior distribution of random effects $\bmath{b}_j$ and posterior distribution of the vector of all parameters $\bmath{\theta}$, respectively.
