--- a/report/pers_schedule/biometrics_submission/replyletter/ref2_resp.tex
+++ b/report/pers_schedule/biometrics_submission/replyletter/ref2_resp.tex
@@ -10,16 +10,16 @@ You may find below our response to the specific issues raised.
 
 \begin{enumerate}
     \item [1,4.] 	
-    As the referee noted, the equation for the longitudinal submodel on page 4 of the original manuscript does not indicate that we used a log transform for PSA levels. This is however the general form of the equation for the longitudinal submodel, and is only used to introduce the joint model (JM) notation. The actual equation, showing the log transformed PSA levels, baseline covariates and B-spline for the effect of time is Equation (\ref{eq : long_model_prias}) in the original manuscript. That is, it is not the case that the log transformation is used only in simulation study as noted by the referee, but also used for fitting the PRIAS data. 
+    As the referee noted, the equation for the longitudinal sub-model on page 4 of the original manuscript does not indicate that we used a log transform for PSA levels. This is however the general form of the equation for the longitudinal sub-model, and is only used to introduce the joint model (JM) notation. The actual equation, showing the log transformed PSA levels, baseline covariates and B-spline for the effect of time is Equation (\ref{eq : long_model_prias}) in the original manuscript. That is, it is not the case that the log transformation is used only in simulation study as noted by the referee, but also used for fitting the PRIAS data. 
 
     Since concerns regarding assumption of normality on errors were also raised by the first referee, we refitted our model with an assumption that the errors are T-distributed (df=3). The residual quantile-quantile plots for the model with normally distributed errors as well as the T-distributed (df=3) errors are shown in Figure \ref{fig : qqplot_norm_t3}. In addition, the fitted marginal $\log_2 \mbox{PSA}$ profiles, and subject specific fitted as well as observed $\log_2 \mbox{PSA}$ profiles of 9 randomly selected patients, using the two different models are presented in Figure \ref{fig : marginal_fitted_psa_NormalVsT3} and Figure \ref{fig : subject_fittedVsObserved_psa_norm_t3}, respectively.
 
-    With regards to the fitted profiles for the 3 demonstration patients, we show their fitted profiles in Figure \ref{fig : fitted_demo_patients}. The fitted profiles are dynamic in nature, and utilize information from both the observed PSA levels and time of latest biopsy. The two time points for each of the patients are the same time points at which we made personalized schedules for these patients in the original manuscript.
+    With regards to the fitted profiles for the 3 demonstration patients, we show their fitted profiles in Figure \ref{fig : fitted_demo_patients_norm_t3}. The fitted profiles are dynamic in nature, and utilize information from both the observed PSA levels and time of latest biopsy. The two time points for each of the patients are the same time points at which we made personalized schedules for these patients in the original manuscript.
     
     \begin{figure}[!htb]
-	\centerline{\includegraphics[width=\columnwidth]{images/model_fit/fitted_demo_patients.eps}}
+	\centerline{\includegraphics[width=\columnwidth]{images/model_fit/fitted_demo_patients_norm_t3.eps}}
 	\caption{Fitted versus observed $\log_2 \mbox{PSA}$ profiles for the three demonstration patients, at two different time points. The vertical line with a dot-dash pattern shows the time of the latest biopsy. The fitted profiles are dynamic in nature, and utilize information from both the observed PSA levels and time of latest biopsy.}
-	\label{fig : fitted_demo_patients}
+	\label{fig : fitted_demo_patients_norm_t3}
 	\end{figure}
 
     \item[2.] The referee noted that we define $\mathcal{M}_i(t)$ as PSA level up-to last biopsy, and it should not be the case. However on page 5 of the original manuscript it is instead defined as the following:
@@ -39,6 +39,11 @@ You may find below our response to the specific issues raised.
 
 	With regards to the choice of weights $\eta_1, \eta_2$, as discussed in Section \ref{subsec : optimal_schedule} of the original manuscript, this choice can be obviated by reformulating the optimization of original weighted sum as a constrained optimization problem. For example, if $\eta_1$ is the weight corresponding to average number of biopsies $E(N^S)$ and $\eta_2$ is the weight corresponding to average offset $E(O^S)$, then we can instead put a constraint $C$ on average offset, and then optimize for only the number of biopsies. Since multiple studies have reported small prostate cancer specific mortality in low risk patients enrolled in active surveillance programs \citep{loeb2016immediate,tosoian2011active,klotz2009clinical},a recommended cutoff $C$ on average offset is 1 year. We have also added this information in the discussion section of the updated manuscript.
 
-	\item[3.] We agree to the referee with regards to not having a direct interpretation of age since we also have quadratic form of age in the model. However in the original manuscript we did not interpret the effect size, but rather only mentioned that \say{$\ldots$ and the age at the time of inclusion in AS were strongly associated with the hazard of GR}. This is still true, because both the linear and quadratic effects of age are significant.
+	\item[3.] We agree to the referee with regards to not having a direct interpretation of age since we also have quadratic form of age in the model.
+YES WE DID A MISTAKE...DID WE? atleast one of the two is significant anyway
+
+ However in the original manuscript we did not interpret the effect size, but rather only mentioned that \say{$\ldots$ and the age at the time of inclusion in AS were strongly associated with the hazard of GR}. This is still true, because both the linear and quadratic effects of age are significant. --WE CALL IT SIGNIFICANT NOW..CHANGE OF SENTENCE
+
+ \item[4.] Good and bad 
 \end{enumerate}
 
