--- a/report/pers_schedule/biometrics_submission/supplementary/prias_param_estimates.tex
+++ b/report/pers_schedule/biometrics_submission/supplementary/prias_param_estimates.tex
@@ -1,57 +1,93 @@
 % !TEX root =  ../supplementary.tex
 
-\section{Parameter Estimates for the PRIAS dataset}
+\section{Fitting the Joint Model to the PRIAS Dataset}
 \label{sec : param_estimates_jm_fit_prias}
+For each of the PRIAS patients, we know their age at the time of inclusion in AS, PSA history and the time interval in which GR is detected. PSA was measured at every three months for the first two years and every six months thereafter. For the longitudinal analysis of PSA we use $\log_2 \mbox{PSA}$ measurements instead of the raw data \citep{nieboer2015nonlinear}. The longitudinal sub-model of the JM we fit is given by:
+\begin{equation}
+\label{eq : long_model_prias_web}
+\begin{aligned}
+\log_2 \mbox{PSA}(t) &= \beta_0 + \beta_1 (\mbox{Age}-70) + \beta_2 (\mbox{Age}-70)^2 + \sum_{k=1}^4 \beta_{k+2} B_k(t,\mathcal{K})\\ 
+&+  b_{i0} + b_{i1} B_7(t, 0.1) + b_{i2} B_8(t, 0.1) +
+\varepsilon_i(t),
+\end{aligned}
+\end{equation}
+where $B_k(t, \mathcal{K})$ denotes the $k$-th basis function of a B-spline with three internal knots at $\mathcal{K} =\{0.1, 0.5, 4\}$ years, and boundary knots at zero and seven (0.99 quantile of the observed follow-up times) years. The spline for the random effects consists of one internal knot at 0.1 years and boundary knots at zero and seven years. Age of patients was median centered to avoid numerical instabilities during parameter estimation. The error $\varepsilon_i(t)$ is assumed to be t-distributed with three degrees of freedom and scale $\sigma$, and is independent of the random effects $\bmath{b}_i$. For the relative risk sub-model the hazard function we fit is given by:
+\begin{equation}
+\label{eq : hazard_prias_web}
+h_i(t) = h_0(t) \exp\big\{\gamma_1 (\mbox{Age}-70)  + \gamma_2 (\mbox{Age}-70)^2 + \alpha_1 m_i(t) + \alpha_2 m'_i(t)\big\},
+\end{equation}
+where $\alpha_1$ and $\alpha_2$ are measures of strength of the association between hazard of GR and $\log_2 \mbox{PSA}$ value $m_i(t)$ and $\log_2 \mbox{PSA}$ velocity $m'_i(t)$, respectively.
+
+\subsection{Choice of the t-distribution for the Error Term}
+\label{subsec : t_dist_choice}
+For the error term $\varepsilon_i(t)$ in the longitudinal sub-model we assumed a t-distribution with three degrees of freedom and scale $\sigma$. This decision was taken on the basis of quantile-quantile plot (left panel of Web Figure \ref{fig : qqplot_norm_t3_web}) of the residuals from a JM fitted to the PRIAS dataset in which errors were assumed to be normally distributed with mean zero and variance $\sigma^2$. It can be seen that the residuals from this model exhibit symmetric long tails. We thank the referees for motivating us to inspect this in detail. In this regard, we then fitted two more JMs, each with errors assumed to be t-distributed with four and three degrees of freedom. Based on the quantile-quantile plots, the model we eventually selected was the one in which t-distribution had three degrees freedom. The quantile-quantile plot for this model is shown in the right panel of Web Figure \ref{fig : qqplot_norm_t3_web}.
+
+\begin{figure}[!htb]
+\centerline{\includegraphics[width=\columnwidth]{images/model_fit/qqplot_norm_t3.eps}}
+\caption{Quantile-quantile plots of subject specific residuals obtained from JMs with assumption of normally distributed errors, and t-distributed (df=3) errors, fitted to the PRIAS data set.}
+\label{fig : qqplot_norm_t3_web}
+\end{figure}
+
+\clearpage
+
+\subsection{Parameter Estimates}
+\label{subsec : param_estimates}
 The posterior parameter estimates for the joint model we fitted to the PRIAS dataset are shown in \ref{tab : PSA_long} (longitudinal sub-model) and \ref{tab : PSA_survival} (relative risk sub-model), and parameter estimates for the variance-covariance matrix from the longitudinal sub-model are the following:
 \begin{equation*}
 \bmath{D} = \begin{bmatrix}
-       0.409 & 0.105 & -0.140 \\[0.3em]
-       0.105 & 1.725 & 0.431 \\[0.3em]
-       -0.140 & 0.431 & 1.326
+       0.469 & 0.092 & -0.099 \\[0.3em]
+       0.092 & 1.092 & 0.378 \\[0.3em]
+       -0.099 & 0.378 & 0.898
      \end{bmatrix}
 \end{equation*} 
-The effect of age only affects the baseline $\log_2 \mbox{PSA}$ score. However it is so small that it can be ignored for all practical purposes. Since the longitudinal evolution of $\log_2 \mbox{PSA}$ is modeled with non-linear terms, the interpretation of the coefficients corresponding to time is not straightforward. In lieu of the interpretation, in Web Figure \ref{fig : fitted_trend_psa} we present the fitted evolution of PSA over a period of 10 years for a hypothetical patient who was included in AS at the age of 70 years.
+For longitudinal sub-model parameter estimates, in \ref{tab : PSA_long} we can see that the age of the patient trivially affects the baseline $\log_2 \mbox{PSA}$ score. Since the longitudinal evolution of $\log_2 \mbox{PSA}$ is modeled with non-linear terms, the interpretation of the coefficients corresponding to time is not straightforward. In lieu of the interpretation, in Web Figure \ref{fig : fitted_trend_psa} we present the fitted marginal evolution of $\log_2 \mbox{PSA}$ over a period of 10 years for a hypothetical patient who was included in AS at the age of 70 years. In addition we present plots of observed versus fitted profiles for nine randomly selected patients (each with more than 3 observations) in Web Figure \ref{fig : subject_fittedVsObserved_psa_t3}. A seed of 2017 (year of submission of the article) was used to sample these patients from the PRIAS dataset sorted by patient ID.
 
 \begin{figure}[!htb]
-\centerline{\includegraphics[width=\columnwidth]{images/model_fit/marginal_fitted_psa_normal.eps}}
-\caption{Fitted evolution of $\log_2 \mbox{PSA}$ over a period of 10 years with 95\% credible interval, for a hypothetical patient who was included in AS at the age of 70 years.}
+\centerline{\includegraphics[width=\columnwidth]{images/model_fit/marginal_fitted_psa_t3.eps}}
+\caption{Fitted marginal evolution of $\log_2 \mbox{PSA}$ over a period of 10 years with 95\% credible interval, for a hypothetical patient who was included in AS at the age of 70 years.}
 \label{fig : fitted_trend_psa}
 \end{figure}
 
+\begin{figure}[!htb]
+	\centerline{\includegraphics[width=\columnwidth]{images/model_fit/subject_fittedVsObserved_psa_t3.eps}}
+	\caption{Fitted versus observed $\log_2 \mbox{PSA}$ profiles for nine randomly selected PRIAS patients. The fitted profiles utilize information from both the observed PSA levels and time of latest biopsy.}
+	\label{fig : subject_fittedVsObserved_psa_t3}
+	\end{figure}
+
 \begin{table}[!htb]
 \begin{center}
-\caption{Longitudinal sub-model estimates for mean and 95\% credible interval, for the joint model fitted to the PRIAS dataset.}
+\caption{Estimated mean and 95\% credible interval for the parameters from the longitudinal sub-model of the joint model fitted to the PRIAS dataset.}
 \label{tab : PSA_long}
 \begin{tabular}{lrrrrr}
 \Hline
 Variable & Mean   & Std. Dev           & 2.5\%               & 97.5\%              & P              \\ \hline
-Intercept                            &  2.455 & 0.012 & 2.433 & 2.480               & \textless0.000 \\
-$(\mbox{Age} - 70)$                         & 0.003 & 0.001 & 4.9 $\times 10^{-4}$ & 0.006 & 0.032          \\
-$(\mbox{Age} - 70)^2$       & -0.001 & 1.4 $\times 10^{-4}$ & -0.001 & -3.5 $\times 10^{-4}$ & \textless0.000 \\
-Spline: visit time {[}0.0, 0.1{]} years   & -0.006 & 0.012 & -0.031 & 0.017 & 0.674 \\
-Spline: visit time {[}0.1, 0.5{]} years & 0.228 & 0.019 & 0.192 & 0.265               & \textless0.000 \\
-Spline: visit time {[}0.5, 4.0{]} years & 0.140 & 0.029 & 0.088 & 0.197               & \textless0.000 \\
-Spline: visit time {[}4.0, 7.0{]} years   & 0.303 & 0.039 & 0.227 & 0.379               & \textless0.000 \\
-$\sigma$                               & 0.324 & 0.001 & 0.321 & 0.326              &  \\ \hline
+Intercept                            &  2.412 & 0.012 & 2.388 & 2.435               & \textless0.000 \\
+$(\mbox{Age} - 70)$                         & 0.003 & 0.001 & -3.039 $\times 10^{-4}$ & 0.005 & 0.084          \\
+$(\mbox{Age} - 70)^2$       & -0.001 & 0.001 & -0.001 & -3.696 $\times 10^{-4}$ & \textless0.000 \\
+Spline: visit time {[}0.0, 0.1{]} years   & 0.044 & 0.010 & 0.026 & 0.063 & \textless0.000 \\
+Spline: visit time {[}0.1, 0.5{]} years & 0.297 & 0.015  &0.269 & 0.328           & \textless0.000 \\
+Spline: visit time {[}0.5, 4.0{]} years & 0.316 & 0.025 &  0.270 & 0.364        & \textless0.000 \\
+Spline: visit time {[}4.0, 7.0{]} years   & 0.466 & 0.032 & 0.402 & 0.527               & \textless0.000 \\
+$\sigma$                               & 0.181 & 0.001 & 0.179 & 0.183              &  \\ \hline
 \end{tabular}
 \end{center}
 \end{table}
 
 \clearpage
 
-For the relative risk sub-model, the parameter estimates in \ref{tab : PSA_survival} show that $\log_2 \mbox{PSA}$ velocity and the age at the time of inclusion in AS are strongly associated with the hazard of GR. For any patient, an increase in $\log_2 \mbox{PSA}$ velocity from -0.07 to 0.12 (first and third quartiles of the fitted velocities, respectively) corresponds to a 1.55 fold increase in the hazard of GR. A 10 year increase in the age at the time of inclusion in AS corresponds to a 1.44 fold increase in the hazard of GR.
+For the relative risk sub-model, the parameter estimates in \ref{tab : PSA_survival} show that $\log_2 \mbox{PSA}$ velocity and the age at the time of inclusion in AS are strongly associated with the hazard of GR. For any patient, an increase in $\log_2 \mbox{PSA}$ velocity from -0.104 to 0.140 (first and third quartiles of the fitted velocities, respectively) corresponds to a 2.022 fold increase in the hazard of GR. A 10 year increase in the age at the time of inclusion in AS corresponds to a 1.425 fold increase in the hazard of GR.
 
 \begin{table}[!htb]
 \begin{center}
-\caption{Relative risk sub-model estimates for mean and 95\% credible interval, for the joint model fitted to the PRIAS dataset.}
+\caption{Estimated mean and 95\% credible interval for the parameters of the relative risk sub-model of the joint model fitted to the PRIAS dataset.}
 \label{tab : PSA_survival}
 \begin{tabular}{lrrrrr}
 \Hline
 Variable                      & Mean   & Std. Dev & 2.5\%  & 97.5\%                 & P              \\ \hline
-$(\mbox{Age} - 70)$                    & 0.037 & 0.006 & 0.025 & 0.0490                  & \textless0.000 \\
-$(\mbox{Age} - 70)^2$   & -0.001 & 0.001 & -0.003 & 1.8 $\times 10^{-4}$ & 0.104          \\
-$\log_2 \mbox{PSA}$                  & -0.049 & 0.064 & -0.172 & 0.078 & 0.414         \\
-Slope($\log_2 \mbox{PSA}$)           & 2.407 & 0.319 & 1.791 & 3.069 & \textless0.000 \\
+$(\mbox{Age} - 70)$                    & 0.035 & 0.006 & 0.023 & 0.047                  & \textless0.000 \\
+$(\mbox{Age} - 70)^2$   & -0.001 & 0.001 & -0.003 & 1.364 $\times 10^{-4}$ & 0.084          \\
+$\log_2 \mbox{PSA}$                  & -0.004 & 0.060 & -0.119 & 0.117 & 0.934         \\
+Slope($\log_2 \mbox{PSA}$)           & 2.888 & 0.290 & 2.318 & 3.452 & \textless0.000 \\
 \hline
 \end{tabular}
 \end{center}
@@ -59,19 +95,24 @@ Slope($\log_2 \mbox{PSA}$)           & 2.407 & 0.319 & 1.791 & 3.069 & \textless
 
 \clearpage
 
-To compare the predictive performance of a model having association between hazard of GR and $\log_2 \mbox{PSA}$ values, versus a model having the association with both $\log_2 \mbox{PSA}$ value and velocity, we calculate the area under the receiver operating characteristic curves, also called AUC \citep*{landmarking2017} for these models. Since in a joint model time dependent AUC is more relevant, we calculate the AUC at year one, year two and year three of follow-up in AS. The time window for which the AUC is calculated is one year. The resulting estimates are presented in \ref{tab : AUC}.
+To compare the predictive performance of a model having association between hazard of GR and $\log_2 \mbox{PSA}$ values, versus a model having the association with both $\log_2 \mbox{PSA}$ value and velocity, we calculate the area under the receiver operating characteristic curves, also called AUC \citep*{landmarking2017} for these models. Since in a joint model time dependent AUC is more relevant, we calculate the AUC at year one, year two and year three of follow-up in AS. To obtain the 95\% confidence interval, we used 15 bootstrapped datasets of patients from the training dataset utilized in this paper. The time window for which the AUC is calculated is one year. The resulting AUC are presented in \ref{tab : AUC}.
 
 \begin{table}[!htb]
 \begin{center}
-\caption{Area under the receiver operating characteristic curves for joint models fitted to the PRIAS dataset.}
+\caption{Area under the receiver operating characteristic curves (AUC), and 95\% confidence interval in brackets, obtained using 15 bootstrapped datasets.}
 \label{tab : AUC}
-\begin{tabular}{lrrr}
+\begin{tabular}{rrr}
 \Hline
-Association of hazard of GR                      & Year one   & Year two & Year three \\ 
+Year                      & $\log_2 \mbox{PSA}$ value and velocity association & $\log_2 \mbox{PSA}$ value association\\ 
 \hline
-with both $\log_2 \mbox{PSA}$ value and velocity                    & 0.61 & 0.66 & 0.60 \\
-with only $\log_2 \mbox{PSA}$ value                   & 0.59 & 0.60 & 0.59 \\
+1 & 0.613 [0.582, 0.632] & 0.595 [0.565, 0.618]\\
+2 & 0.648 [0.608, 0.685] & 0.609 [0.568, 0.654]\\
+3 & 0.593 [0.560, 0.638] & 0.590 [0.536, 0.628]\\
 \hline
-\end{tabular}
+\end{tabular}	
 \end{center}
 \end{table}
+
+\clearpage
+\subsection{PSA-DT Dependent Interval Censoring in Time of Gleason Reclassification}
+In PRIAS, the interval $l_i < T_i^* \leq r_i$ in which GR is detected depends on the observed PSA values (via PSA-DT). It is natural to question in this scenario if the parameters of the JM are affected by PSA-DT dependent interval censoring. To this end, we discussed via the formulation of the likelihood function in \ref{subsec : int_censoring_fulllikelihood_proof}, that the JM gives unbiased estimates of the parameters even if the interval censoring depends on PSA-DT. However, in this section we also demonstrate this via a simulated dataset of 750 patients. The true event times $T^*_i$ for these patients were generated using parameters from a joint model fitted to the PRIAS dataset. However this joint model did not include association between velocity of log PSA values and hazard of GR. That is, the hazard of GR $h_i(t)$ at any time $t$ depends only on the underlying log PSA value $m_i(t)$ at that time. Furthermore, for these patients we used the schedule of PRIAS to generate the interval $l_i \leq T^*_i \leq r_i$ in which GR is detected. Thus the observed data for $i$-th patient is $\{\boldsymbol{y}_i, l_i, r_i\}$. Our aim is to show that if there is no association between $h_i(t)$ and velocity of log PSA value $m'_i(t)$, then even though the biopsy schedule depends on PSA-DT (which is a crude measure of PSA velocity), a JM fitted with both value and velocity associations will have an insignificant velocity association. In the fitted JM we found the value association (95\% credible interval in brackets) to be 0.182 [0.090, 0.274], and the velocity association to be -0.001 [-0.295, 0.254]. That is even though the schedule of biopsies depended upon observed PSA values it did not lead to a spurious association. 
